--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,11 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/c106b49234.js"
+      crossorigin="anonymous"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
